--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <input type="text" id="input" placeholder="Add a to-do">
         </div>
     </div>
+    <script src="js/app-sw.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
