--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
             <div class="clear">
                 <i class="fa fa-refresh"></i>
             </div>
-            <button class="add-button">Click to Add to home screen</button>
+            <button class="add-to-screen-button">Add to home screen</button>
             <div id="date"></div>
         </div>
         <todo-app> </todo-app>    
         </div>
  
     <script type="module" src="app.js"></script>
+
 </body>
 </html>
